--- a/src/index.ejs
+++ b/src/index.ejs
@@ -15,6 +15,7 @@
 <h1>Hello,EJS!</h1>
 <div class="container">
     <img src="images/headerBg.png">
+    this is ejs templates
 </div>
 </body>
 </html>
