--- a/src/style/index.less
+++ b/src/style/index.less
@@ -2,7 +2,8 @@
 h1 {
   color: deepskyblue;
   text-align: center;
-  background: #F00;
+  background: linear-gradient(to top, #F00, #CFF);
+  border-radius: 10px;
 }
 
 h2 {
