--- a/src/index.ejs
+++ b/src/index.ejs
@@ -12,10 +12,8 @@
     <title>MY Project</title>
 </head>
 <body>
-<h1>Hello,EJS!</h1>
-<div class="container">
-    <img src="images/headerBg.png">
-    this is ejs templates
+<div id="app">
+
 </div>
 </body>
 </html>
