--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,11 +9,9 @@
     <meta name="keywords" content=""/>
     <meta content="telephone=no" name="format-detection"/>
     <meta content="email=no" name="format-detection"/>
-    <title>MY Project</title>
+    <title></title>
 </head>
 <body>
-<div id="app">
-
-</div>
+<div id="app"></div>
 </body>
 </html>
